Rename the variable 'role' to 'name', refactor the 'setRole' method for the new user in the 'save' method in UserService, and replace the 'findAllByRoles' method with the 'findByName' method.